--- a/index2.html
+++ b/index2.html
@@ -38,22 +38,52 @@
 </table>
 
 <h3>Tạo mốt html form như bên dưới</h3>
-<labe>Enter name: </labe>
-<input type="text"> </br>
-<labe>Enter password: : </labe>
-<input type="text"></br>
-<labe>Enter Email: </labe>
-<input type="text"></br>
-<label>Enter Gender</label>
-<input type="radio" id="html" name="gender" value="HTML">
-  <label>Nam</label>
-  <input type="radio" id="css" name="gender" value="CSS">
-  <label>Nữ </label><br>
-<label>Select country</label>
-<select class="cate" name="cars" id="cars">
-    <option value="">VietNam</option>
-    <option value="">China</option>
-</select></br>
+
+<table>
+    <tr>
+        <td>
+            <labe>Enter name: </labe>
+        </td>
+        <td><input type="text"> </br></td>
+
+    </tr>
+    <tr>
+        <td>
+            <labe>Enter password: </labe>
+        </td>
+        <td><input type="text"> </br></td>
+
+    </tr>
+    <tr>
+        <td>
+            <labe>Enter Email: </labe>
+        </td>
+        <td><input type="text"> </br></td>
+
+    </tr>
+    <tr>
+        <td>
+            <labe>Enter Gender: </labe>
+        </td>
+        <td>
+            <input type="radio" id="html" name="gender" value="HTML">
+              <label>Nam</label>
+              <input type="radio" id="css" name="gender" value="CSS">
+              <label>Nữ </label><br>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <labe>Enter Email: </labe>
+        </td>
+        <td><select class="cate" name="cars" id="cars">
+                <option value="">VietNam</option>
+                <option value="">China</option>
+            </select></td>
+
+    </tr>
+    
+</table>
 <input type="button" value="Register">
 
 
